Updated for Presentation
Refactored and added comments to all files

--- a/CleanDownloads/appsettings.json
+++ b/CleanDownloads/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Directory": "C:\\Users\\Zach\\Downloads",
+  "Directory": "C:\\Users\\zachary.robinson\\Downloads",
   "Expiration": {
     "Years": 0,
     "Months": 1,
